# kiingo-command-center

./: .gitignore  CLAUDE.md  README.md  codex-claude-headless-reference.md  index.html  local-cli-webapp-implementation-plan.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vitest.config.js  vitest.config.ts
db/: metrics_backup.sql
docs/: compatibility-matrix.json  gap-remediation-followup-2026-02-13.md  gap-remediation-plan.md  harness-integration-plan.md  release-checklist.md  session-id-centric-conversation-plan.md  session-id-conversation-implementation-checklist.md  technical-spec.md
scripts/: bind_discovery_calls_screen.py  export_metrics_db.py  seed_bootcamp_delivery_volume.py  seed_bootcamp_learner_engagement.py  seed_bootcamp_pipeline.py  seed_ceo_dashboard.py  seed_ceo_dashboard_batch2.py  seed_ceo_dashboard_batch3.py  seed_cohort_completion_velocity.py  seed_discovery_calls.py  seed_instructor_workload.py  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs  policy.rs  redaction.rs  runner.rs  scheduler.rs  session.rs  workspace.rs
src-tauri/src/adapters/: claude.rs  codex.rs  compatibility.rs  mod.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/harness/: capability_adjuster.rs  cli_allowlist.rs  cli_missing.rs  line_buffer.rs  mod.rs  shell_prelude.rs  structured_output.rs  transcript.rs
src-tauri/tests/: integration_runner.rs
src-tauri/tests/fixtures/: mock-claude.sh  mock-codex.sh
(+77 files in other folders)
