[package]
name = "local-cli-webapp"
version = "0.1.0"
description = "Local Codex/Claude headless runner"
authors = ["Kiingo"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "local_cli_webapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
portable-pty = "0.9"
regex = "1.11"
rand = "0.9"
rusqlite = { version = "0.33", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1.13", features = ["v4", "serde"] }
keyring = "3.6"

[dev-dependencies]
tempfile = "3.15"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }
